added views, message resources + partial registration completed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,7 @@ label.registration.success.title=Registration complete
 label.registration.success.content=Thank you for registration. We send you email with confirmation. Please follow link which contains in this email
 #registration email
 message.regSucc=your registration was successful
+#registration errors
+validation.registration.password.invalid=Invalid password
+validation.registration.size=Size is too small
+TOO_SHORT=Password too short
