--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,13 +1,16 @@
-label.form.title= CODA-2 Регистрация
-label.user.firstName= Имя
-label.user.lastName= Фамилия
+label.form.title= CODA-2 Р РµРіРёСЃС‚СЂР°С†РёСЏ
+label.user.firstName= РРјСЏ
+label.user.lastName= Р¤Р°РјРёР»РёСЏ
 label.user.email= Email
-label.user.password= Пароль
-label.user.confirmPass= Подтверждение пароля
-label.form.submit= Зарегистрироватся
-label.form.loginLink= Войти
+label.user.password= РџР°СЂРѕР»СЊ
+label.user.confirmPass= РџРѕРІС‚РѕСЂРёС‚Рµ РїР°СЂРѕР»СЊ
+label.form.submit= Р—Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°С‚СЃСЏ
+label.form.loginLink= РђРІС‚РѕСЂРёР·РёСЂРѕРІР°С‚СЃСЏ
 #registration success page
-label.registration.success.title=Регистрация завершена
-label.registration.success.content=Спасибо за регистрацию. Мы отправили Вам письмо, пожалуйста проследуйте по ссылке, указаной в нем.
+label.registration.success.title=Р РµС€РіРёСЃС‚СЂР°С†РёСЏ РїСЂРѕС€Р»Р° СѓСЃРїРµС€РЅРѕ
+label.registration.success.content=РЎРїР°СЃРёР±Рѕ Р·Р° СЂРµРіРёСЃС‚СЂР°С†РёСЋ! РњС‹ РѕС‚РїСЂР°РІРёР»Рё Р’Р°Рј РїРёСЃСЊРјРѕ СЃ РїРѕРґС‚РІРµСЂР¶РґРµРЅРёРµРјСЋ РџРѕР¶Р°Р»СѓР№СЃС‚Р° РїСЂРѕСЃР»РµРґСѓР№С‚Рµ РїРѕ СЃСЃС‹Р»РєРµ, СѓРєР°Р·Р°РЅРЅРѕР№ Р’Р°Рј РІ РїРёСЃСЊРјРµ
 #registration email
-message.regSucc=Регистрация была успешной
+message.regSucc=Р’Р°С€Р° СЂРµРіРёСЃС‚СЂР°С†РёСЏ РїСЂРѕС€Р»Р° СѓСЃРїРµС€РЅРѕ
+#registration errors
+validation.registration.password.invalid=РџР°СЂРѕР»СЊ РЅРµ РєРѕСЂСЂРµРєС‚РµРЅ
+validation.registration.size=РџРѕР»Рµ СЃР»РёС€РєРѕРј РєРѕСЂРѕС‚РєРѕРµ
