--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -11,3 +11,6 @@ label.registration.success.title=Registration complete
 label.registration.success.content=Thank you for registration. We send you email with confirmation. Please follow link which contains in this email
 #registration email
 message.regSucc=your registration was successful
+#registration errors
+validation.registration.password.invalid=Invalid password(ua)
+TOO_SHORT=Password too short(ua)
